<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plus"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="45dp"
            android:background="@color/white"
            />








    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/My_Pet"
            android:text="@string/Pet_Info"
            android:background="@color/white"
            >


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/My_Ask"
            android:text="@string/Doc"
            android:background="@color/white"
            android:layout_marginTop="-10dp"
            >


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/My_Setting"
            android:text="@string/Date"
            android:layout_marginTop="-10dp"
            android:background="@color/white"
            >


        </Button>

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/My_Doc"-->
<!--            android:text="@string/My_Doc"-->
<!--            android:layout_marginTop="-10dp"-->
<!--            >-->


<!--        </Button>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/My_Appointment"-->
<!--            android:text="@string/My_Appointment"-->
<!--            android:layout_marginTop="-10dp"-->
<!--            >-->


<!--        </Button>-->



    </LinearLayout>



</LinearLayout>